--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ android {
             buildConfigField "String", "MERCHANT_SERVER_URL", "\"http://MERCHANT_SERVER\""
         }
     }
+    androidExtensions {
+        experimental = true
+    }
 }
 
 dependencies {
@@ -63,9 +66,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation "com.github.bumptech.glide:okhttp3-integration:4.8.0"
     kapt 'com.github.bumptech.glide:compiler:4.8.0'
-
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    kapt "com.jakewharton:butterknife-compiler:8.8.1"
 
     implementation 'org.parceler:parceler-api:1.1.11'
     kapt 'org.parceler:parceler:1.1.11'
